# OsirisOs

./: Cargo.toml  README.md  codex  osiris-rm.json
akernet/akernet-bridge/: Cargo.toml
akernet/akernet-bridge/src/: main.rs
anubis/: Cargo.toml
anubis/src/: main.rs
harvester/: Cargo.toml
harvester/src/: harvest.rs  install.rs  main.rs  manifest.rs  remove.rs
kha/: Cargo.toml
kha/src/: main.rs
maat/: Cargo.toml
maat/src/: daemon.rs  error.rs  lib.rs  message.rs  registry.rs
opium/: Cargo.toml
opium/src/: config.rs  db.rs  main.rs  manifest.rs  repo.rs
ra/ra-config/: Cargo.toml
ra/ra-config/src/: lib.rs
ra/ra-panel/: Cargo.toml
ra/ra-panel/src/: lib.rs
ra/ra-shell/: Cargo.toml
ra/ra-shell/src/: main.rs
ra/ra-wm/: Cargo.toml
ra/ra-wm/src/: lib.rs  main.rs
thoth/: Cargo.toml
thoth/src/: main.rs
