[package]
name        = "akernet-bridge"
version     = "0.1.2"
edition     = "2021"
description = "AkerNet command/control bridge — daemon orchestration layer"
authors     = ["droidmaster"]

[[bin]]
name = "akernet-bridge"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
