[package]
name        = "ra-panel"
version     = "0.8.0-alpha"
edition     = "2021"
description = "Ra panel — taskbar and status bar for desktop and mobile"
authors     = ["droidmaster"]

[lib]
name = "ra_panel"
path = "src/lib.rs"

[dependencies]
ra-config  = { path = "../ra-config" }
serde      = { workspace = true }
toml       = { workspace = true }
anyhow     = { workspace = true }
