[package]
name        = "ra-wm"
version     = "0.8.0-alpha"
edition     = "2021"
description = "Ra window manager — Wayland compositor core"
authors     = ["droidmaster"]

[[bin]]
name = "ra-wm"
path = "src/main.rs"

[lib]
name = 'ra_wm'
path = 'src/lib.rs'

[dependencies]
ra-config  = { path = "../ra-config" }
ra-panel   = { path = "../ra-panel" }
serde      = { workspace = true }
toml       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }

# Wayland compositor stack — wlroots binding
# Uncomment when Wayland implementation begins in Stage 3
# smithay = { version = "0.3", features = ["backend_drm", "backend_libinput"] }
